# pm-journey

./: .gitignore  .gitignore 2  AGENTS.md  AUTH0_MIGRATION.md  CLAUDE.md  PROMPT-apply-ecc-settings.md  docker-compose.yml  scenarios.csv  skills-lock.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build 2.rs  fly.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-10428f576b2d763f5bb5903045704d860b2143a8c87f67eee583ae9540cd9dcf 2.json  query-2b183c7c293e334af6cc8224eb419c619e6a38454669feaf0fd227d077c97f30.json  query-2b74772367d7cf1f92cf087d6133a529f078d4d11b84eeabf379a819aaa67de7.json  query-35d61f40d43b170639a420f76a4c46a748023635c4ab63f91df2802715d9ffcd 2.json  query-46d6d00ff4b182960d34425497c31e120fbfc650eac79a4fedc625e114e3bf8e 2.json  query-4736a2f6d86b889888b5cfb6f8f21dbb61b45165fef9b284db45386f22823afd.json  query-47aeb7d76ba94c1cff121cba4b8fd005fe6adc04abe6571bede9a8fbb34b3f17 2.json  query-4e7016ef3121d8d3992785de19da662c4e635ce017ca6f03d73f5a7a10a39a0e.json  query-53bc77cd00798a77fa8ed55fe6bb4e39f68458d15b10eaa336840b950749eeb3 2.json  query-5d30644db9e7d559860edfe6c30e6e6faf1279b5f24cc3db3309a0be8b0d3bee.json  query-5eb1c0c9fb5c9c41145625233f0654d59955a67a534d1a4e6bf3a0377afe49ef 2.json  query-75fdea9fd1cedd6d6d927fc2d8b993c9a30fa6faaa2e9a48347d8348e5c22aa7.json  query-776b8e3e476925d184dae04db9986f9044e686b299f74d0509b783056da15475.json  query-7d02b8ce9f7b51c8cf39d8e71f6f6a9fc9b9a202a35d8890ecec94c9ea65a659 2.json  query-8dda1aba73f391d02c3428414d0256b487307733821a41de396ca54f7668f42f 2.json  (+11 more)
backend/src/: error.rs  lib.rs  (+2 more)
(+446 files in other folders)
